test/error/SymbolGlobalInside.fu
public class Test
{
	public static bool Run()
	{
		Test.Test.Test p; //ERROR: Invalid type
		Test.Test.Test() o; //ERROR: Invalid type
		long.int i; //ERROR: Invalid type
		return long.int.MaxValue > 0; //ERROR: 'int' not found
	}
}
